--- a/styles.css
+++ b/styles.css
@@ -209,9 +209,13 @@ h1 {
 }
 
 .profile__detail {
-  width: 80%;
+  width: 60%;
   padding: 20px 5px;
   margin: 30px 0;
+  font-family: "Raleway", sans-serif;
+  font-weight: bold;
+  font-size: large;
+  line-height: 2em;
 }
 
 .profile__btn, .projects__btn, .skill__btn {
@@ -238,7 +242,7 @@ h1 {
 
 @media screen and (max-width: 870px) {
   .page__profile {
-    height: 1500px;
+    height: 1700px;
   }
 
   .profile__main {
