--- a/styles.scss
+++ b/styles.scss
@@ -221,9 +221,13 @@ h1 {
 }
 
 .profile__detail {
-  width: 80%;
+  width: 60%;
   padding: 20px 5px;
   margin: 30px 0;
+  font-family: "Raleway", sans-serif;
+  font-weight: bold;
+  font-size: large;
+  line-height: 2em;
 }
 
 .profile__btn {
@@ -250,7 +254,7 @@ h1 {
 
 @media screen and (max-width: 870px) {
   .page__profile {
-    height: 1500px;
+    height: 1700px;
   }
   .profile__main {
     flex-direction: column;
